Fix archive shows not wrapping to screen.

--- a/smallslive/static/sass/pages/_search.scss
+++ b/smallslive/static/sass/pages/_search.scss
@@ -192,6 +192,9 @@
   display: flex;
   flex-wrap: wrap;
   padding-top: 40px;
+  .event-row {
+    flex-wrap: wrap;
+  }
 
   @media (max-width: $screen-sm-max) {
     padding-left: 0;
